--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
+    "react-responsive-carousel": "^3.2.7",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1"
   },
