--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-media": "^1.10.0",
     "react-popper": "^2.2.3",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.2.0",
