--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.6.14",
     "react-dom": "^16.13.1",
     "react-media": "^1.10.0",
     "react-popper": "^2.2.3",
