--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
-    "react-burger-menu": "^2.6.14",
+    "react-burger-menu": "^2.6.15",
     "react-dom": "^16.13.1",
     "react-media": "^1.10.0",
     "react-popper": "^2.2.3",
