--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.26.1",
     "react-touch-carousel": "^0.9.4",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
