--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cross-fetch": "^3.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "jquery-parallax.js": "^1.5.0",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.15",
     "react-dom": "^16.13.1",
