--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^16.13.1",
     "react-media": "^1.10.0",
     "react-popper": "^2.2.3",
+    "react-read-more": "^1.0.0",
+    "react-read-more-less": "^0.1.6",
     "react-redux": "^7.2.1",
     "react-redux-form": "^1.16.14",
     "react-responsive-carousel": "^3.2.9",
@@ -25,6 +27,7 @@
     "react-slick": "^0.26.1",
     "react-touch-carousel": "^0.9.4",
     "reactstrap": "^8.4.1",
+    "read-more-react": "^1.0.10",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
