--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.0.5",
@@ -13,6 +14,7 @@
     "jquery": "^3.5.1",
     "jquery-parallax.js": "^1.5.0",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-burger-menu": "^2.6.15",
     "react-dom": "^16.13.1",
     "react-media": "^1.10.0",
