--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-burger-menu": "^2.6.15",
+    "react-card-flipper": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-hoverable-card": "^1.1.1",
     "react-media": "^1.10.0",
     "react-popper": "^2.2.3",
     "react-read-more": "^1.0.0",
